Additional Thursday morning suggestions

--- a/01-Duties.Rmd
+++ b/01-Duties.Rmd
@@ -1,12 +1,14 @@
 # Duties {#duties}
 
+Masters' student consultants are expected to serve 1.5 years. PhD student consultants are expected to serve 1.5 years with an opportunity to renew participation on a year-to-year basis (or to alternatively serve as consultants to Eagle I.O) 
+
 ## Eagle I.O Expectations (Tasks aka Criteria aka DVs)
 + Coordinate and attend Fall semester orientation session in Late August
 + Attend mandatory bi-weekly meetings 
-+ Contribute to most Eagle I.O projects (mentorship program, survey developments)
-+ Attend most Eagle I-O events (METRO, social meetings, mentor meetings) 
++ Attend most Eagle I.O events (METRO, social meetings, mentor meetings) 
 + Be a professional ambassador (aligned with: 1) Eagle, 2) MSU, and 3) the larger discipline of I-O Psychology)
-+ Participte in completion of Eagle IO projects
++ Participte in completion of Eagle I.O projects
+    + e.g., mentorship program, survey developments
 + Update Handbooks to support growth of program for future cohorts
 + Must participate as a mentor in the Mentorship program
 + **For those in formal roles:**
