--- a/01-Duties.Rmd
+++ b/01-Duties.Rmd
@@ -3,20 +3,20 @@
 Masters' student consultants are expected to serve 1.5 years. PhD student consultants are expected to serve 1.5 years with an opportunity to renew participation on a year-to-year basis (or to alternatively serve as consultants to Eagle I.O) 
 
 ## Eagle I.O Expectations (Tasks aka Criteria aka DVs)
-+ Coordinate and attend Fall semester orientation session in Late August
++ Coordinate and attend Fall semester orientation session in late August
 + Attend mandatory bi-weekly meetings 
 + Attend most Eagle I.O events (METRO, social meetings, mentor meetings) 
-+ Be a professional ambassador (aligned with: 1) Eagle, 2) MSU, and 3) the larger discipline of I-O Psychology)
-+ Participte in completion of Eagle I.O projects
++ Be a professional ambassador aligned with: 1) Eagle, 2) MSU, and 3) the larger discipline of I-O Psychology
++ Participte in the completion of Eagle I.O projects
     + e.g., mentorship program, survey developments
-+ Update Handbooks to support growth of program for future cohorts
++ Update handbooks to support program growth for the future cohorts
 + Must participate as a mentor in the Mentorship program
 + **For those in formal roles:**
     + Successfully execute the responsibilities of the assigned role
 
 ## Eagle I.O Requirements (KSA’s aka Predictors aka IVs)
 + Ability to work in a team-based environment 
-+ Be receptive to group members opinions and suggestions
++ Be receptive to group members' opinions and suggestions
 + Collaborate with group members to facilitate growth in current and future projects
 + Ability to communicate verbally and in writing
 + Critical thinking
