--- a/01-Duties.Rmd
+++ b/01-Duties.Rmd
@@ -2,22 +2,24 @@
 
 Masters' student consultants are expected to serve 1.5 years. PhD student consultants are expected to serve 1.5 years with an opportunity to renew participation on a year-to-year basis (or to alternatively serve as consultants to Eagle I.O) 
 
-## Eagle I.O Expectations (Tasks aka Criteria aka DVs)
-+ Coordinate and attend Fall semester orientation session in late August
-+ Attend mandatory bi-weekly meetings 
-+ Attend most Eagle I.O events (METRO, social meetings, mentor meetings) 
-+ Be a professional ambassador aligned with: 1) Eagle, 2) MSU, and 3) the larger discipline of I-O Psychology
-+ Participte in the completion of Eagle I.O projects
-    + e.g., mentorship program, survey developments
-+ Update handbooks to support program growth for the future cohorts
+## Eagle I.O Expectations 
++ Coordinate and attend Fall semester orientation session 
++ Attend mandatory bi-weekly meetings during Fall and Spring semesters
+    + Stay active and engaged during summer
++ Contribute to Eagle I.O projects (mentorship program, survey developments)
++ Be a professional ambassador (aligned with: 1) Eagle, 2) MSU, and 3) the larger discipline of I-O Psychology)
+    + Attend Eagle I.O events (METRO, social meetings, mentor meetings)
++ Contribute to at least one Eagle I.O project
++ Annually review (and update if warranted) the Mentorship and Consultant manuals
 + Must participate as a mentor in the Mentorship program
 + **For those in formal roles:**
     + Successfully execute the responsibilities of the assigned role
+    + Keep track of the inbox if you are the **Parlimentarian**
 
-## Eagle I.O Requirements (KSA’s aka Predictors aka IVs)
+## Eagle I.O Requirements 
 + Ability to work in a team-based environment 
 + Be receptive to group members' opinions and suggestions
-+ Collaborate with group members to facilitate growth in current and future projects
++ Take initiative to develop current and future projects
 + Ability to communicate verbally and in writing
 + Critical thinking
 + Self-motivation
@@ -25,8 +27,4 @@ Masters' student consultants are expected to serve 1.5 years. PhD student consul
 + Determination and persistence
 + Ability to organize
 
-
-<center>
-![](images/IVDV.PNG)
-</center> 
 
