expanded roles, images, and reorganization of chapters

--- a/01-membership.Rmd
+++ b/01-membership.Rmd
@@ -1,5 +1,7 @@
 # Membership
 
+![](images/team.PNG)
+
 ## Current members
 
 Attend all Eagle IO meetings unless there is a specific reason for absence, maintian a high GPA, actively participate in the group and the products etc. 
